--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.1.5",
+        "@inertiajs/inertia": "^0.11.1",
         "@vue-hero-icons/outline": "^1.7.2",
-        "@vue-hero-icons/solid": "^1.7.2"
+        "@vue-hero-icons/solid": "^1.7.2",
+        "vue-multiselect": "^3.1.0"
     }
 }
