--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
         "@inertiajs/inertia": "^0.11.1",
         "@vue-hero-icons/outline": "^1.7.2",
         "@vue-hero-icons/solid": "^1.7.2",
-        "vue-multiselect": "^3.1.0"
+        "jspdf": "^2.5.2",
+        "jspdf-autotable": "^3.8.4",
+        "sweetalert2": "^11.6.13",
+        "vue-multiselect": "^3.1.0",
+        "xlsx": "^0.18.5"
     }
 }
